@@ -1,9 +1,9 @@
  
 class ENTITY:
 
-    def __init__(self, POSITION, *args, **kwargs):
+    def __init__(self, TYPE, POSITION=None, *args, **kwargs):
         self.POSITION = POSITION
         self.ARMOR_CLASS = 1
         self.INVENTORY = {"ITEMS":[]}
-        
+        self.TYPE = TYPE
         self.ATTRIBUTES = set(args)
