@@ -4,6 +4,4 @@ from WORLD.GLOBAL_LISTS import ITEMS
 class HANDAXE(MELEE_WEAPON):
 
     def __init__(self, POSITION=None):
-        super().__init__((1, 6), POSITION, "THROWN")
-
-        self.NAME = f"HANDAXE.{self.ITEM_ID}"
+        super().__init__((1, 6), "HANDAXE", POSITION, "THROWN")
