@@ -3,8 +3,9 @@ from WORLD.GLOBAL_LISTS import ITEMS, ADD_ENTITY
 
 class ITEM(ENTITY):
 
-    def __init__(self, POSITION=None, *args, **kwargs):
-        super().__init__(POSITION, *args, **kwargs)
+    def __init__(self, TYPE, POSITION, *args, **kwargs):
+        super().__init__(TYPE, POSITION, *args, **kwargs)
         
         ADD_ENTITY(self, ITEMS)
         self.ITEM_ID = ITEMS.index(self)
+        self.NAME = f"{self.TYPE}.{self.ITEM_ID}"
