@@ -4,6 +4,5 @@ from WORLD.GLOBAL_LISTS import ITEMS
 class LEATHER_ARMOR(ARMOR):
 
     def __init__(self, POSITION=None, *args, **kwargs):
-        super().__init__(ARMOR_CLASS=11, HEAVY=False, POSITION=POSITION, *args, **kwargs)
-
-        self.NAME = f"LEATHER ARMOR.{self.ITEM_ID}"
+        super().__init__(11, "LEATHER ARMOR", HEAVY=False, POSITION=POSITION, *args, **kwargs)
+        
