@@ -4,6 +4,5 @@ from WORLD.GLOBAL_LISTS import ITEMS
 class LONGSWORD(MELEE_WEAPON):
 
     def __init__(self, POSITION=None):
-        super().__init__((1, 8), POSITION, "VERSATILE")
-
-        self.NAME = f"LONGSWORD.{self.ITEM_ID}"
+        super().__init__((1, 8), "LONGSWORD", POSITION, "VERSATILE")
+        
