@@ -5,7 +5,8 @@ def INTRODUCTION(VERSION):
     input("The Jesuit (created by CaffeineSnake) is upcoming Christian superhero film from the studio that brought you The Methodist. Ignatius of Loyola is sent from Heaven to purify the Jesuit Order. Meanwhile, the Order sends Lenyn Ynot to find J. K. Rowling. Can Ignatius stop them before they activate the Millennium Clock?\n")
     input("New Australia is a turn-based dungeon crawler.")
     input("The objective is to escape the dungeon without being killed by the monsters.")
-    input("To move, enter NORTH, SOUTH, EAST, or WEST.")
+    input("To move, enter NORTH, SOUTH, EAST, or WEST and the number of feet you want to move.")
+    input("To open inventory, enter INVENTORY.")
     input("To pass, enter LOOK.")
     input("To attack a monster, enter ATTACK.")
     input("To exit the game, enter QUIT.")
