@@ -1,3 +1,5 @@
+from LOGIC.MATH import RELATIVE_LOCATION
+
 class LOCATION:
 
     def __init__(self, MIN_X, MAX_X, MAX_Y, MIN_Y, DESCRIPTION, ENTITIES=[], DOORS={}):
@@ -25,5 +27,12 @@ class LOCATION:
         WEST = (Y-self.MIN_Y)*5
         
         DESCRIPTION = f"\n\tThe {self.DESCRIPTION} is {LENGTH_X} feet by {LENGTH_Y} feet. The walls are {NORTH} feet NORTH, {SOUTH} feet SOUTH, {EAST} feet EAST, and {WEST} feet WEST."
+
+        for key, value in self.DOORS.items():
+            X_DISTANCE, Y_DISTANCE, X_DIRECTION, Y_DIRECTION = RELATIVE_LOCATION(*PLAYER.POSITION, *value)
+            X_DISTANCE, Y_DISTANCE = f"{X_DISTANCE*5} feet", f"{Y_DISTANCE*5} feet"
+
+            DESCRIPTION += f" The {key} DOOR is {X_DISTANCE} {X_DIRECTION}, {Y_DISTANCE} {Y_DIRECTION}."
+
         return DESCRIPTION
     
